# SocialWellnesScore

./: .gitignore  simulator.launch.py  sws_plot.py
logs/: sws_20260717_181100.csv  sws_20260721_193202.csv  sws_20260721_200856.csv  sws_20260722_221914.csv  sws_20260724_042904.csv  sws_20260724_043747.csv  sws_20260724_052623.csv
ws/install/: local_setup.sh  setup.sh
ws/install/basic_say/lib/basic_say/: start_skill
ws/log/: latest_build
ws/src/basic_say/: README.md  setup.cfg  setup.py
ws/src/basic_say/basic_say/: skill_impl.py  start_skill.py
ws/src/basic_say/config/: 00-defaults.yml
ws/src/basic_say/module/: basic_say_module.yaml
ws/src/basic_say/test/: test_skillint.py
ws/src/chatbot/: README.md  package.xml  setup.cfg  setup.py
ws/src/chatbot/chatbot/: node_impl.py
ws/src/chatbot/launch/: chatbot.launch.py
ws/src/chatbot/module/: chatbot  chatbot_module.yaml
ws/src/emotion_mirror/: README.md  setup.cfg  setup.py
ws/src/emotion_mirror/emotion_mirror/: mission_controller.py
ws/src/emotion_mirror/launch/: emotion_mirror.launch.py
ws/src/emotion_mirror/module_set/: emotion_mirror  emotion_mirror_module_set.yaml
ws/src/emotion_mirror/res/: data.yaml
ws/src/sample_skill_msgs/: CMakeLists.txt
ws/src/sws_metrics/: package.xml  setup.cfg  setup.py
ws/src/sws_metrics/launch/: sws_camera.launch.py
ws/src/sws_metrics/sws_metrics/: fake_hri_pub.py  gaze_attention.py  gaze_estimator.py  head_gaze.py  interaction_freq.py  isolation_detect.py  proximity_node.py  sws_aggregator.py  vocal_engagement.py
(+64 files in other folders)
