<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sws_metrics</name>
  <version>0.1.0</version>
  <description>
    Social Wellness Score (SWS) metric nodes for RYAN social companion robot.
    Phase 2 of DU REU 2026 — Computer Vision and Social Robotics Laboratory.
    Nodes: gaze_estimator, proximity_node, interaction_freq,
           isolation_detect, sws_aggregator, csv_logger.
  </description>
  <maintainer email="joaquin@du.edu">Joaquin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
